test/pass/api/list/list_fill_with_circular_value.lly
var a: list[any] = [1]

var d: list[any] = list::fill(2, 1.@(any))
d[0] = [1, 1.1]

var f: any = a[0]
var g: any = d[0].@(list[any])[0]
