test/fail/basic_syntax/wrong_arg_count_property.lly
#[
SyntaxError: Property abc.a expects 0 args, but got 2.
    from wrong_arg_count_property.lly:11
]#

class abc() {
    var @a = {|| 10}
}

var d = abc::new()
d.a(1)
